--- a/style.css
+++ b/style.css
@@ -1,40 +1,113 @@
 
-.sidebar{
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 25%; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-    z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
-    left: 0;
-    background: rgba(150, 255,0, 0.5);
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px;
-    justify-content: center;
+.menubar{
+width: 15%;
+height: 30%;
+    background: rgba(0, 255,255, 0.5);
+float: left;
 }
 
-
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 .Name{
-    text-align: center;
     word-wrap: break-word;
-    font-size: 3vw;
+    font-size: 5.5vw;
     object-fit: contain;
-}
-
-.profilepic{
-    max-height: 30%;
-    max-width: 100%;
-    object-fit: contain;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-}
-
-
-.subtit{
-    text-align: center;
-    font-size: 1vw;
+    max-height: 50%;
+    color: white;
+    font-family: 'Bebas Neue', cursive;
+    margin: 10px;
+    float: left;
 
 }
+canvas {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:-1;
+}
+.body{
+background: rgba(1,0,0,1);
+    margin: 0;
+    padding: 0;
+}
+.menubar{
+    position: relative;
+    display : block;
+    margin:auto;
+    width: 50%;
+    height: 25%;
+    background: rgba(255, 255,255, 0.5);
+    padding:10;
+    margin: 5px auto;
+    border-radius: 0px 0px 25px 25px;
+    border: 3px solid black;
+
+}
+
+.menubuttons{
+    float:right;
+    width: 70%;
+    background: rgba(0,255,0,1);
+  top: 50%;
+      object-fit: contain;
+
+}
+@media screen and (max-width: 600px){
+
+ul.topnav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 20px 16px;
+  text-decoration: none;
+  font-size: 3vw;
+}
+
+}
+ul.topnav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 2vw;
+}
+
+ul.topnav li {float: left;}
+
+ul.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+    display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.topbar{
+width: 100%;
+      display: float;
+
+
+}
+.navitem {
+  display: inline-block;
+  width: 20%;
+  height: 30px;
+  font-weight: bold;
+  float: right;
+  padding: 10px;
+}
+
+
+.title{
+    width: 100%;
+    float: center;
+    height: 10%;
+  display: flex;
+
+}
+
